--- a/todo
+++ b/todo
@@ -1,3 +1,3 @@
 #!/bin/sh
-python3 ~/Developer/todo/main.py
-vim ~/Dropbox\ \(Personal\)/Todos/$(date '+%Y-%m-%d').md
+python3 ~/todo/main.py
+vim ~/todo/$(date '+%Y-%m-%d').md
